# hero

./: .mxproject  CMakeLists.txt  CMakePresets.json  FINAL_CHANGES.txt  GIMBAL_COMPLETE_REFACTOR.md  GIMBAL_REFACTOR_SUMMARY.md  LOGIC_VERIFICATION_REPORT.md  OPTIMIZATION_BEFORE_AFTER.md  OPTIMIZATION_SUMMARY.txt  README.md  STM32H723XG_FLASH.ld  USAGE_GUIDE_AND_DEBUGGING.md  sinserely.ioc  sinserely.uvguix.梣  sinserely.uvoptx
Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
MDK-ARM/: JLinkLog.txt  JLinkSettings.ini  sinserely.cbuild-idx.yml  sinserely.cbuild-pack.yml  sinserely.cproject.yml  sinserely.csolution.yml  sinserely.uvguix.梣  sinserely.uvoptx  sinserely.uvprojx  startup_stm32h723xx.lst
MDK-ARM/RTE/_sinserely/: RTE_Components.h
MDK-ARM/sinserely/: adc.crf  adc.d  bdma.crf  bdma.d  bmi088driver.d  board_link.d  bsp_dwt.d  bsp_fdcan.d  bsp_gpio.d  bsp_pwm.d  bsp_spi.d  bsp_usart.d  can_comm.d  cmsis_os2.crf  cmsis_os2.d  cordic.crf  cordic.d  crc.d  croutine.crf  croutine.d  djimotor.d  dma.crf  dma.d  dmmotor.d  event_groups.crf  event_groups.d  fdcan.crf  fdcan.d  filter.d  freertos.crf  freertos.d  gimbal.d  gimbal_cmd.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  heap_5.d  iwdg.crf  iwdg.d  (+136 more)
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MDK-ARM/tmp/1/: CMakeCache.txt
MDK-ARM/tmp/sinserely+sinserely/: CMakeLists.txt  groups.cmake  toolchain.cmake
MDK-ARM/tmp/sinserely+sinserely/src/sinserely+sinserely-stamp/: sinserely+sinserely-configure-.cmake  sinserely+sinserely-database-.cmake  sinserely+sinserely-source_dirinfo.txt
MDK-ARM/tmp/sinserely+sinserely/tmp/: sinserely+sinserely-cfgcmd.txt  sinserely+sinserely-mkdirs.cmake
USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
User/Algorithm/: CRC.c  CRC.h  Kalman_Filter.c  Kalman_Filter.h  LPF.c  LPF.h  Lqr.c  Lqr.h  MPC.cpp  MPC.h  Quaternion.c  Quaternion.h  RMLibHead.h  RMQueue.c  RMQueue.h  VMP.cpp  VMP.h  pid.c  pid.h  slope.c  slope.h
User/BSP/: bsp_dwt.c  bsp_dwt.h  bsp_fdcan.c  bsp_fdcan.h  bsp_gpio.c  bsp_gpio.h  bsp_pwm.c  bsp_pwm.h  bsp_spi.c  bsp_spi.h  bsp_usart.c  bsp_usart.h  dma_heap.cpp  dma_heap.h
User/Chassis_AIgenergate/: DELIVERY_REPORT.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  chassis.c  chassis.h  chassis_example.c
User/Cmd/: Gimbal_Cmd.c  Gimbal_Cmd.h
User/Device/BMI088/: BMI088driver.c  BMI088driver.h
User/Device/MiniPC/: MiniPC.c  MiniPC.h
User/Device/can_comm/: can_comm.c  can_comm.h
User/Device/motor/: DJImotor.c  DJImotor.h  DMmotor.c  DMmotor.h  motor.c  motor.h
User/Device/music/: music.c  music.h
User/Device/referee/: Referee_System.c  Referee_System.h
User/Device/remote_control/: remote.c  remote.h
User/Device/vofa+/: vofa.c
User/Gimbal/: Gimbal.c  Gimbal.h
User/Shoot/: Shoot.c  Shoot.h
User/Task/: TASK_Init.c  TASK_Init.h  Task_Data.c  Task_Data.h  Task_Gimbal.c  Task_Gimbal.h
User/robot/: robot.h
cmake/stm32cubemx/: CMakeLists.txt
memory/: gimbal_final_optimization.md  gimbal_refactor.md
